# gvf-parametric-ros

./: README.md
gvf_parametric/: CMakeLists.txt  package.xml
gvf_parametric/include/gvf_parametric/: gvf_parametric_control_2d_spline.h  gvf_parametric_utils.h  spline.h
gvf_parametric/launch/: sim_gvf_parametric_2d_spline.launch
gvf_parametric/src/: gvf_parametric_control_2d_spline.cpp
gvf_parametric/src/nodes/: TEST_trajectory_pub_node.cpp  gvf_parametric_control_2d_spline_node.cpp
gvf_parametric/src/rviz/: gvf_param_spline.rviz
