<?xml version="1.0"?>
<package>
  <name>gvf_parametric</name>
  <version>0.0.0</version>
  <description>A ROS package for Guidance based on Parametric Vector Fields.</description>

  <author>Alvaro Martinez Novo</author>
  <maintainer email="martineznovo@ugr.es">Alvaro Martinez Novo</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>